--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -76,8 +76,11 @@
   {{- end -}}
 
   <link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
-  {{- if (hasPrefix .Dir "discography") -}}
+  {{- if (hasPrefix .File.Dir "discography") -}}
   <link rel="stylesheet" href="{{ "css/discography.css" | absURL }}" />
+  {{- end -}}
+  {{- if (hasPrefix .File.BaseFileName "works") -}}
+  <link rel="stylesheet" href="{{ "css/works.css" | absURL }}" />
   {{- end -}}
 
   {{- if .Site.Params.staticman -}}
