--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -97,7 +97,7 @@
 {{- if (hasPrefix .File.BaseFileName "works") -}}
 <link rel="stylesheet" href="{{ "css/works.css" | absURL }}" />
 {{- end -}}
-{{- if (hasPrefix .File.BaseFileName "event_info") -}}
+{{- if (hasPrefix .File.Dir "event_info") -}}
 <link rel="stylesheet" href="{{ "css/event_info.css" | absURL }}" />
 {{- end -}}
 
